syntax = "proto3";
package protocol;
option go_package = "./;protocol";

import "google/protobuf/timestamp.proto";

message MQMessages {
  repeated MQMessage messages = 1;
}

message MQMessage {
  int64 id = 1;
  int64 user_id = 2;
  int64 sender_id = 3;
  int32 session_type = 4;
  int64 receiver_id = 5;
  int32 message_type = 6;
  bytes content = 7;
  int64 seq = 8;
  google.protobuf.Timestamp send_time = 9;
  google.protobuf.Timestamp create_time = 10;
  google.protobuf.Timestamp update_time = 11;
}
